--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <canvas id="scene"></canvas>
-    <script type="module" src="/src/scene.ts"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
